--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -8,6 +8,40 @@
     color: $common-text-color;
     height: 40px;
     position: relative;
+
+    .languages-logout{
+        display: block;
+        align-items: center;
+        margin-right: 10px;
+        
+        span{
+            margin-right: 20px;
+            font-weight: 600;
+            cursor: pointer;
+        }
+
+        .language-vi{
+            opacity: 0.8;
+            &.active{
+                opacity: 1;
+                color: yellow;
+            }
+            &:hover {
+                background-color: darken($colormain, 5);
+            }
+        }
+        .language-en{
+            opacity: 0.8;
+            &.active{
+                opacity: 1;
+                color: #04AA6D;
+            }
+            &:hover {
+                background-color: darken($colormain, 5);
+            }
+        }
+    }
+
     .btn-logout {
         color: $common-text-color;
         line-height: 40px;
