--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -1,7 +1,12 @@
 .home-header-container{
     width: 100%;
-    height: 60px;
-    margin: 20px 0;
+    height: 100%;
+    padding: 20px 0;
+    position: sticky;
+    top:0;
+    background: white;
+    z-index: 3;
+    border-bottom: 3px solid #efeef5;
     
     .home-header-content{
         width: 100%;
