completed new user view, get gender from API (6/4/2023)

--- a/src/components/Navigator.scss
+++ b/src/components/Navigator.scss
@@ -35,6 +35,15 @@
                 height: 35px;
                 line-height: 35px;
                 text-transform: none;
+
+                &.active {
+                    background-color: darken($bg-menu-color, 5);
+                    a{
+                        color: orange;
+                    }
+                    
+                }
+
                 .menu-link {
                     text-decoration: none;
                     color: $text-in-light;
