--- a/src/containers/Patient/Doctor/DoctorSchedulePage.scss
+++ b/src/containers/Patient/Doctor/DoctorSchedulePage.scss
@@ -31,26 +31,39 @@
             }
         }
 
+        
         .time-content{
-            display: flex;
-            gap: 10px;
-            flex-wrap: wrap;
-            button{
-                width: 190px;
-                padding: 5px 10px;
-                border: none;
-                outline: none;
-                background-color: #fff8ae;
-                border-radius: 5px;
-                font-weight: 600;
-
-                &:hover{
-                    background-color: #33b0e3;
+            .time-content-buttons{
+                display: flex;
+                gap: 10px;
+                flex-wrap: wrap;
+                button{
+                    width: 190px;
+                    padding: 5px 10px;
                     border: none;
-                outline: none;
-                    // border:2px solid #33b0e3;
+                    outline: none;
+                    background-color: #fff8ae;
+                    border-radius: 5px;
+                    font-weight: 600;
+
+                    &:hover{
+                        background-color: #33b0e3;
+                        border: none;
+                    outline: none;
+                        // border:2px solid #33b0e3;
+                    }
+                }
+
+                .no-schedule{
+                    font-style: italic;
                 }
             }
+            
+            .book-free{
+                margin-top: 20px;
+            }
         }
+
+        
     }
 }
