--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -1,6 +1,6 @@
 .home-header-container{
     width: 100%;
-    height: 100%;
+    // height: 100%;
     padding: 20px 0;
     position: sticky;
     top:0;
