completed get specialty data from API and set to specialty component + error: can not convert image from blob to base64 and show in view (27/4/2023)

--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -103,9 +103,9 @@
     &.section-specialty{
         background: #fff; 
 
-        .bg{
-            background: url('../../assets/specialty/coxuongkhop.jpg') center center no-repeat;
-        }
+        // .bg{
+        //     background: url('../../assets/specialty/coxuongkhop.jpg') center center no-repeat;
+        // }
     }
     
     //Section Medical facility
