--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -50,12 +50,15 @@
                     width: 270px;
                     height: 150px;
                     background-color: #eee;
+                    background-repeat: no-repeat;
+                    // background-position: center;
                     background-size: cover;
+                    object-fit: cover;
                     margin: auto;
                 }
                 h3{
                     font-size: 14px;
-                    padding: 5px 0;
+                    padding: 5px;
                 }
             }
 
@@ -102,10 +105,6 @@
     //Section Specialty
     &.section-specialty{
         background: #fff; 
-
-        .bg{
-            background: url('../../assets/specialty/coxuongkhop.jpg') center center no-repeat;
-        }
     }
     
     //Section Medical facility
@@ -113,7 +112,12 @@
         background: #f5f5f5; 
 
         .bg{
-            background: url('../../assets/medical-facility/exson.jpg') center center no-repeat;
+           border: 1px solid red;
+        //    background-position: center;
+        //    background-position-x: center;
+        //    background-position-y: center;
+        //    width: 90%;
+        // background: url('../../assets/medical-facility/exson.jpg') center center no-repeat;
         }
     }
 
@@ -131,7 +135,6 @@
     
                         .bg{
                             margin: 0 auto;
-                            // background: url('../../assets/doctors/doctor.jpg') center center no-repeat;
                             width: 120px !important;
                             height: 120px !important;
                             border-radius: 50%;
