--- a/src/containers/System/Doctor/ManagePatient.scss
+++ b/src/containers/System/Doctor/ManagePatient.scss
@@ -1,3 +1,10 @@
+div._loading_overlay_wrapper {
+  position: unset;
+  ._loading_overlay_overlay{
+    z-index: 100000;
+  }
+  
+  }
 .manage-patient-container{
     padding: 40px;
     .manage-patient-title{
